perubahan pada README dan folder baru pics

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <section class="destination">
         <figure>
           <img
-            src="bali.jpg"
+            src="pics/bali.jpg"
             alt="Bali"
             title="Bali"
             width="100px"
@@ -44,7 +44,7 @@
         </figure>
         <figure>
           <img
-            src="Bromo.jpg"
+            src="pics/Bromo.jpg"
             alt="Gunung Bromo"
             title="Gunung Bromo"
             width="100px"
@@ -54,7 +54,7 @@
         </figure>
         <figure>
           <img
-            src="komodo island.jpg"
+            src="pics/komodo island.jpg"
             alt="Pulau Komodo"
             title="Pulau Komodo"
             width="100px"
@@ -136,8 +136,13 @@
       </ul>
       <span>
         <picture>
-          <source media="(min-width: 430px)" srcset="Thanks2.jpg" />
-          <img src="Thanks1.jpg" alt="Thankyou" width="200px" length="800px" />
+          <source media="(min-width: 430px)" srcset="pics/Thanks2.jpg" />
+          <img
+            src="pics/Thanks1.jpg"
+            alt="Thankyou"
+            width="200px"
+            length="800px"
+          />
         </picture>
       </span>
     </main>
